# ADZDB

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: database_bench.rs
examples/: basic.rs  blockchain.rs
src/: lib.rs
