[package]
name = "adzdb"
version = "0.1.0"
edition = "2021"
authors = ["COINjecture Team", "Quigles1337"]
description = "Append-only Deterministic Zero-copy Database for blockchain"
license = "MIT"
repository = "https://github.com/Quigles1337/ADZDB"
documentation = "https://docs.rs/adzdb"
readme = "README.md"
keywords = ["database", "blockchain", "append-only", "zero-copy", "proof-of-work"]
categories = ["database", "data-structures", "cryptography"]
rust-version = "1.70"

[dependencies]
# None needed - pure Rust implementation using std::fs

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "database_bench"
harness = false

[features]
default = []
# Enable mmap support (requires platform-specific code)
mmap = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

